[package]
name = "reexport-proc-macro"
version = "1.0.0"
authors = ["Konrad Borowski <github@borowski.pw>"]
repository = "https://github.com/xfix/reexport-proc-macro"
license = "MIT/Apache-2.0"
description = "Re-export a procedural macro"
keywords = ["no_std", "macros"]
categories = ["no-std", "rust-patterns"]
documentation = "https://docs.rs/reexport-proc-macro"
readme = "README.md"

[badges]
travis-ci = { repository = "xfix/enum-map" }
is-it-maintained-issue-resolution = { repository = "xfix/enum-map" }
is-it-maintained-open-issues = { repository = "xfix/enum-map" }
maintenance = { status = "actively-developed" }
codecov = { repository = "xfix/enum-map" }

[dev-dependencies]
enum-map = "0.2.24"
enum-map-derive = "0.2.4"
serde_derive = "1.0.36"
