[package]
name = "reexport-proc-macro"
version = "1.0.6"
authors = ["Konrad Borowski <github@borowski.pw>"]
repository = "https://gitlab.com/KonradBorowski/reexport-proc-macro"
license = "MIT OR Apache-2.0"
description = "Re-export a procedural macro"
keywords = ["no_std", "macros"]
categories = ["no-std", "rust-patterns"]
documentation = "https://docs.rs/reexport-proc-macro"
readme = "README.md"

[badges]
gitlab = { repository = "KonradBorowski/reexport-proc-macro" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
enum-map = "0.2.24"
enum-map-derive = "0.2.4"
serde_derive = "1.0.36"
